--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
-  command = "npm run build"
+  command = "npm run netlify-build"
   publish = "dist"
   functions = "netlify/functions"
+  environment = { NODE_VERSION = "18" }
 
 [functions]
   node_bundler = "esbuild"
+  included_files = ["netlify/functions/package.json"]
 
 [[redirects]]
   from = "/api/*"
