--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,9 @@
 
 [functions]
   node_bundler = "esbuild"
-  included_files = ["netlify/functions/package.json"]
+
+[[plugins]]
+  package = "@netlify/plugin-functions-install-core"
 
 [[redirects]]
   from = "/api/*"
