--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "lucide-react": "^0.344.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.2",
+    "resend": "^4.4.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
