--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "build": "vite build",
     "netlify-build": "npm install && npm run build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:functions": "netlify dev"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^6.10.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^3.2.0",
     "react": "^18.3.1",
@@ -31,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "netlify-cli": "^20.1.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
